--- a/style.css
+++ b/style.css
@@ -899,18 +899,75 @@ textarea {
   margin-bottom: 1.5em;
 }
 
-#edit-link {
+footer .edit-link {
   display: block;
   background: var(--warning);
   padding: var(--padding);
+  position: relative;
+  margin-top: calc(var(--margin) * 3);
 }
-#edit-link ::before {
+footer .edit-link ::before {
   content: "";
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid var(--warning);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(var(--margin), -100%);
 }
-#edit-link a {
+footer .edit-link a {
   display: inline-block;
   line-height: 1;
+  color: var(--white) !important;
+}
+
+.wpcf7-not-valid-tip {
+  background: var(--danger);
+  display: block;
+  padding: var(--padding);
   color: var(--white);
+  font-size: var(--h5);
+  line-height: 1.25;
+}
+
+.wp-block-buttons .wp-block-button .wp-block-button__link {
+  color: var(--link-color);
+  font-size: var(--p);
+  line-height: calc(var(--p) * 1.5);
+  width: auto;
+  padding: calc(var(--padding) * 0.5) calc(var(--padding) * 0.75);
+  display: inline-block;
+  margin: calc(var(--margin) * 0.5) calc(var(--margin) * 1) calc(var(--margin) * 0.5) 0;
+  border: 1px solid var(--link-color);
+  font-weight: 700;
+  transition: all 0.3s ease;
+  background: 0 0;
+  cursor: pointer;
+  vertical-align: middle;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  color: var(--white);
+  border-color: var(--link-color);
+  background: var(--link-color);
+}
+.wp-block-buttons .wp-block-button .wp-block-button__link:hover {
+  color: var(--white);
+  border-color: var(--link-hover-color);
+  background: var(--link-hover-color);
+}
+.wp-block-buttons .wp-block-button.XL .wp-block-button__link {
+  font-size: calc(var(--p) * 1.5) !important;
+  line-height: calc(var(--p) * 2) !important;
+  padding: calc(var(--padding) * 1) calc(var(--padding) * 1.5);
+}
+
+.map {
+  width: 100%;
+  height: 40vh;
 }
 
 /*# sourceMappingURL=style.css.map */
