--- a/sass/style.scss
+++ b/sass/style.scss
@@ -59,16 +59,16 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Normalize
 --------------------------------------------- */
-@import "generic/normalize";
+/*@import "generic/normalize";*/
 
 /* Box sizing
 --------------------------------------------- */
-@import "generic/box-sizing";
+/*@import "generic/box-sizing";*/
 
 /*--------------------------------------------------------------
 # Base
 --------------------------------------------------------------*/
-@import "base/base";
+/*@import "base/base";*/
 
 /*--------------------------------------------------------------
 # Layouts
@@ -79,7 +79,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Components
 --------------------------------------------------------------*/
-@import "components/components";
+/*@import "components/components";*/
 
 /*--------------------------------------------------------------
 # Plugins
@@ -87,7 +87,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Jetpack infinite scroll
 --------------------------------------------- */
-@import "plugins/jetpack/infinite-scroll";
+/*@import "plugins/jetpack/infinite-scroll";*/
 
 /*--------------------------------------------------------------
 # Utilities
@@ -95,10 +95,10 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Accessibility
 --------------------------------------------- */
-@import "utilities/accessibility";
+/*@import "utilities/accessibility";*/
 
 /* Alignments
 --------------------------------------------- */
-@import "utilities/alignments";
+/*@import "utilities/alignments";*/
 
 @import "this";
