--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,4 +101,4 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------- */
 /*@import "utilities/alignments";*/
 
-@import "this";
+@import "mini_wp";
