--- a/sass/_mini_wp.scss
+++ b/sass/_mini_wp.scss
@@ -1,3 +1,94 @@
+body {
+  &.admin-bar {
+    header#header {
+      top: 32px;
+      &.open-menu {
+        top: 0;
+      }
+    }
+  }
+}
+
+body.wp-admin {
+  input, select, textarea {
+    display: inline-block;
+  }
+  p.search-box {
+    flex-wrap: nowrap;
+    margin-bottom: var(--margin)!important;
+  }
+  .tablenav {
+    height: auto;
+  }
+  .bulkactions, .actions {
+    display: flex;
+  }
+  .desc {
+    font-style: inherit;
+    margin-top: 4px;
+    margin-left: 7px;
+    line-height: inherit;
+    font-size: var(--p)!important;
+  }
+  .postbox-header .handle-actions {
+    display: flex;
+  }
+  ul {
+    margin: 0;
+  }
+  &.update-core-php h2 {
+    margin-top: calc(var(--margin) * 2);
+  }
+  .wp-core-ui .button-link {
+    font-size: var(--p);
+  }
+  :not(#iubenda-cs-banner) input[type=checkbox], :not(#iubenda-iframe) input[type=checkbox]{
+    margin: calc(var(--margin) * 0.5);
+    width: 16px !important;
+    height: 16px !important;
+  }
+  :not(#iubenda-cs-banner) input[type=checkbox]::before, :not(#iubenda-iframe) input[type=checkbox]::before {
+    width: 20px;
+    height: 20px;
+  }
+  :not(#iubenda-cs-banner) input[type=checkbox]:checked::after, :not(#iubenda-iframe) input[type=checkbox]:checked::after {
+    width: 10px;
+    height: 10px;
+  }
+  .attachments-browser .media-toolbar-secondary {
+    max-width: 66%;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  .view-switch.media-grid-view-switch {
+    display: flex;
+  }
+  .button-link {
+    margin: 0;
+    padding: 0 calc(var(--padding) * 0.5);
+    box-shadow: none;
+    border: 0;
+    border-radius: 5px;
+    background: var(--link-color);
+    cursor: pointer;
+    text-align: left;
+    color: var(--white);
+    text-decoration: none;
+    transition-property: border, background, color;
+    transition-duration: .05s;
+    transition-timing-function: ease-in-out; 
+    vertical-align: middle;
+    font-size: calc(var(--p) * 0.85);
+    &:hover, &:focus {
+      background: var(--link-hover-color);
+      color: var(--white);
+      text-decoration: none;
+    }
+  }
+}
+
 footer {
     .edit-link {
         display: block;
@@ -46,4 +137,54 @@ footer {
     .njt-gdpr-content {
         line-height: 1.5;
     }
+}
+
+#adminmenu .wp-menu-image img {
+    /* your styles here */
+    width: 20px;
+    height: 20px;
+    padding: 0;
+}
+.nav-tab-wrapper, .wrap h2.nav-tab-wrapper, h1.nav-tab-wrapper {
+    margin: calc(var(--margin)*2) 0;
+}
+
+.theme-browser .theme .theme-name  {
+  height: auto;
+}
+// login
+body.login-action-login {
+    background: -webkit-linear-gradient(135deg, #1b9958 0, #025A5B 100%) !important;
+    background: -moz-linear-gradient(135deg, #1b9958 0, #025A5B 100%) !important;
+    background: -o-linear-gradient(135deg, #1b9958 0, #025A5B 100%) !important;
+    background: linear-gradient(135deg, #1b9958 0, #025A5B 100%) !important;
+}
+body.login-action-login #login h1 a, .login h1 a {
+    background-image: url('<?= get_stylesheet_directory_uri(); ?>/img/mini_emblem.svg');
+    width: 100px;
+    height: 58px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-bottom: 3rem;
+    filter: brightness(0) invert(1);
+}
+body.login-action-login #loginform {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    border:0;
+    box-shadow: 0 0 10px 0 rgb( 0 0 0 / 45%);
+}
+body.login-action-login #nav a.wp-login-lost-password, body.login-action-login #backtoblog a, .privacy-policy-page-link a.privacy-policy-link {
+    color: white;
+}
+body.login-action-login #nav a.wp-login-lost-password:hover, body.login-action-login #backtoblog a:hover, .privacy-policy-page-link a.privacy-policy-link:hover {
+    color: #CCCCCC;
+}
+body.login-action-login .language-switcher #language-switcher label span.dashicons {
+    color: white;
+}
+body.login-action-login .button.button-primary {
+    background-color: #1b9958;
+    border-color: #1b9958;
 }
