--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 /*!
 Theme Name: mini
-Theme URI: http://underscores.me/
+Theme URI: https://mini.uwa.agency/
 Author: Giacomo Rizzotti
 Author URI: https://www.giacomorizzotti.com
 Description: a minimal theme based on mini framework.
@@ -21,84 +21,5 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
-
-/*--------------------------------------------------------------
->>> TABLE OF CONTENTS:
-----------------------------------------------------------------
-# Generic
-	- Normalize
-	- Box sizing
-# Base
-	- Typography
-	- Elements
-	- Links
-	- Forms
-## Layouts
-# Components
-	- Navigation
-	- Posts and pages
-	- Comments
-	- Widgets
-	- Media
-	- Captions
-	- Galleries
-# plugins
-	- Jetpack infinite scroll
-# Utilities
-	- Accessibility
-	- Alignments
-
---------------------------------------------------------------*/
-
-// Import variables and mixins.
-@import "abstracts/abstracts";
-
-/*--------------------------------------------------------------
-# Generic
---------------------------------------------------------------*/
-
-/* Normalize
---------------------------------------------- */
-/*@import "generic/normalize";*/
-
-/* Box sizing
---------------------------------------------- */
-/*@import "generic/box-sizing";*/
-
-/*--------------------------------------------------------------
-# Base
---------------------------------------------------------------*/
-/*@import "base/base";*/
-
-/*--------------------------------------------------------------
-# Layouts
---------------------------------------------------------------*/
-// @import "layouts/content-sidebar"; // Uncomment this line for a sidebar on right side of your content.
-// @import "layouts/sidebar-content"; // Uncomment this line for a sidebar on left side of your content.
-
-/*--------------------------------------------------------------
-# Components
---------------------------------------------------------------*/
-/*@import "components/components";*/
-
-/*--------------------------------------------------------------
-# Plugins
---------------------------------------------------------------*/
-
-/* Jetpack infinite scroll
---------------------------------------------- */
-/*@import "plugins/jetpack/infinite-scroll";*/
-
-/*--------------------------------------------------------------
-# Utilities
---------------------------------------------------------------*/
-
-/* Accessibility
---------------------------------------------- */
-/*@import "utilities/accessibility";*/
-
-/* Alignments
---------------------------------------------- */
-/*@import "utilities/alignments";*/
 
 @import "mini_wp";
