Working on theme admin pages and features (social, and messaging apps)

--- a/sass/_mini_wp.scss
+++ b/sass/_mini_wp.scss
@@ -10,6 +10,9 @@ body {
 }
 
 body.wp-admin {
+  a {
+    color: var(--black);
+  }
   input, select, textarea {
     display: inline-block;
   }
@@ -137,6 +140,18 @@ footer {
     .njt-gdpr-content {
         line-height: 1.5;
     }
+}
+
+.wp-core-ui .button, .wp-core-ui .button-secondary {
+  color: var(--white);
+  border-color: var(--link-color);
+  background: var(--link-color);
+}
+
+.wrap .add-new-h2, .wrap .add-new-h2:active, .wrap .page-title-action, .wrap .page-title-action:active {
+  color: var(--white);
+  border-color: var(--link-hover-color);
+  background: var(--link-hover-color);
 }
 
 #adminmenu .wp-menu-image img {
