--- a/sass/_mini_wp.scss
+++ b/sass/_mini_wp.scss
@@ -141,7 +141,7 @@ body.login-action-login .button.button-primary {
     }
   }
 }
-#header-styling, #inpage-elements, #page-customization {
+#header-styling, #inpage-elements, #page-customization, #date-time, #date-only, #location {
   background: var(--false-white);
   border-left: 5px solid var(--third-color);
   h2.hndle {
@@ -174,6 +174,12 @@ body.wp-admin {
   }
   a {
     color: var(--black);
+  }
+  .welcome-panel {
+    background: transparent;;
+  }
+  .welcome-panel-content {
+    min-height: auto;
   }
   /*
   input, select, textarea {
