--- a/sass/_mini_wp.scss
+++ b/sass/_mini_wp.scss
@@ -141,7 +141,7 @@ body.login-action-login .button.button-primary {
     }
   }
 }
-#header-styling, #inpage-elements, #page-customization, #mini-date, #mini-lesson-date, #mini-time, #location, #teams, #mini-parent-course {
+#header-styling, #inpage-elements, #page-customization, #mini-date, #mini-lesson-date, #mini-time, #location, #teams, #mini-parent-course, #date-only, #date-time {
   background: var(--false-white);
   border-left: 5px solid var(--third-color);
   .handle-order-higher, .handle-order-lower, .handlediv {
