--- a/micro/style.css
+++ b/micro/style.css
@@ -4,7 +4,7 @@
  Description:  Child theme for Mini WordPress theme
  Author:       Your Name
  Author URI:   https://yoursite.com
- Template:     mini
+ Template:     mini-theme
  Version:      1.0.0
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
